@@ -15,24 +15,20 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.apache.hama.bsp;
+package org.apache.hama.zookeeper;
+
+import org.apache.hama.Constants;
+import org.apache.hama.HamaConfiguration;
 
 import junit.framework.TestCase;
 
-import org.apache.hama.util.Bytes;
+public class TestZKTools extends TestCase {
 
-public class TestMessages extends TestCase {
+  public void testZKProps() {
+    HamaConfiguration conf = new HamaConfiguration();
+    conf.set(Constants.ZOOKEEPER_QUORUM, "test.com:123");
+    conf.set(Constants.ZOOKEPER_CLIENT_PORT, "2222");
 
-  public void testByteMessage() {
-    int dataSize = (int) (Runtime.getRuntime().maxMemory() * 0.60);
-    ByteMessage msg = new ByteMessage(Bytes.toBytes("tag"), new byte[dataSize]);
-    assertEquals(msg.getData().length, dataSize);
-    msg = null;
-    
-    byte[] dummyData = new byte[1024];
-    ByteMessage msg2 = new ByteMessage(Bytes.tail(dummyData, 128), dummyData);
-    assertEquals(
-        Bytes.compareTo(msg2.getTag(), 0, 128, msg2.getData(),
-            msg2.getData().length - 128, 128), 0);
+    assertEquals("test.com:2222", QuorumPeer.getZKQuorumServersString(conf));
   }
 }
